<resources>
    <string name="app_name">SmartSquares</string>
    <string name="level_static">Level:</string>
    <string name="level_dinamic">2</string>
    <string name="score_static">Score: </string>
    <string name="score_dinamic">0</string>
    <string name="heart_static">"Heart:"</string>
    <string name="heart_dinamic">0</string>
    <string name="button_middle">Play Again</string>
    <string name="skip">Skip</string>
    <string name="instructiuni">Instructions</string>
    <string name="copyright_instr">Copyright www.eliseinicolae.com @2020</string>
    <string name="instructions_about">The <b>sticks</b> will appear randomly for 1.5 seconds and you have to remember where they were.\n\n\n

        If you press the <b>\'HINT\'</b> button, the boxes will reappear for 1.5 seconds.\n\nP.S:If you have more than 850 points, you are in the hard zone &#129299;. \n\n\n Enjoy &#128521;!</string>
    <string name="title_instructions">SmartSquares</string>
</resources>
