<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffde3"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="382dp"
        android:layout_height="182dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_squares"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <!-- Level  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textAlignment="center">

            <TextView
                android:id="@+id/level_static"
                android:layout_width="308dp"
                android:layout_height="wrap_content"
                android:text="@string/level_static"
                android:textAlignment="textEnd"
                android:textColor="#4d5457"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/level_dinamic"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/level_dinamic"
                android:textAlignment="textStart"
                android:textColor="#4d5457"
                android:textSize="25sp"
                android:textStyle="bold" />


        </LinearLayout>


        <!-- Score  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/score_static"
                android:layout_width="308dp"
                android:layout_height="wrap_content"
                android:text="@string/score_static"
                android:textAlignment="textEnd"
                android:textColor="#4d5457"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/score_dinamic"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/score_dinamic"
                android:textAlignment="textStart"
                android:textColor="#4d5457"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/heart_static"
                android:layout_width="308dp"
                android:layout_height="match_parent"
                android:text="@string/heart_static"
                android:textAlignment="textEnd"
                android:textColor="#4d5457"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/heart_dinamic"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:text="@string/heart_dinamic"
                android:textAlignment="textStart"
                android:textColor="#4d5457"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/button_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_middle"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_squares"
        android:layout_width="406dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_instructtion">

    </LinearLayout>

    <Button
        android:id="@+id/main_instructtion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="197dp"
        android:text="@string/instructiuni"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_squares"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>